--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="styles.css">
-        <title>Personal Dashboard</title>
-    </head>
-    <body>
-        <main>    
-            <div class="top">
-                <div id="crypto">
-                    <div id="crypto-top"></div>
-                </div>
-                <div id="weather"></div>
-            </div>
-            
-            <h1 id="time" class="time"></h1>
-            <p id="author"></p>
-        </main>
-        <script src="index.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet"
+    />
+
+    <title>Personal Dashboard</title>
+</head>
+<body>
+    <main>
+    <div class="top">
+        <div id="crypto">
+        <div id="crypto-top"></div>
+        </div>
+        <div id="weather"></div>
+    </div>
+
+    <h1 id="time" class="time"></h1>
+    <p id="author"></p>
+    </main>
+    <script src="index.js"></script>
+</body>
 </html>
